# 510

./: .gitignore  README.md
assignments/001-Hello/: hello.py
assignments/002-Day01_ReadingQuiz/: answers.txt
assignments/004-Day02_ReadingQuiz/: answers.txt
assignments/005-Algorithm/: answer.txt
assignments/007-Comp_Arithm_py/: answers.txt
assignments/008-Mortgage/: mortgage.py
assignments/010-Paycheck/: paycheck.py
assignments/095-PuzzleSolver/: CMakeLists.txt  README.md  missing_entries1.txt  missing_rows.txt  sample1.ans.txt  sample1.txt  sample_easy.txt  sample_expert.txt  sample_image.txt  testcases.txt
assignments/095-PuzzleSolver/src/: Makefile  _kubok.cpp  kubok.cpp  kubok.hpp  main.cpp  testcases.txt
notebooks/: 00-Preliminaries.ipynb  01-Introduction.ipynb  02-ProblemSolvingByProgramming.ipynb  03-Types,Values,Variables,Names.ipynb  04-Boolean,Numbers,Operations.ipynb  05-BasicInputAndOutput.ipynb  06-Control.ipynb  07-Functions.ipynb  08-Strings.ipynb  08.a-Strings-OtherFunctions.ipynb  09-FormattingStrings.ipynb  09.a-FormattingStrings-OldStyle.ipynb  09.b-FormattingStrings-fStrings.ipynb  10-Lists.ipynb  11-Tuples.ipynb  12-RandomNumbers.ipynb  13-Iteration.ipynb  14-Dictionaries.ipynb  15-Sets.ipynb  16-Miscellaneous.ipynb  17-Files.ipynb  18-FileOperations.ipynb  19-Recursion.ipynb  20-Modules.ipynb  21-Validation,ExceptionsAndErrorHandling.ipynb  22-Testing.ipynb  23-Debugging.ipynb  24-ClassesAndObjects.ipynb  25-ClassesAndObjects-Inheritance.ipynb  26-Comprehensions.ipynb  27-DateTime.ipynb  28-RegularExpressions.ipynb  requirements.txt
(+454 files in other folders)
